// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Grid breakpoint styles should match larger screen sizes if their breakpoint style is not defined 1`] = `
.c2 {
  box-sizing: border-box;
  margin: 8px 8px;
  width: calc(25% - 16px);
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 > .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: normal;
  -webkit-justify-content: normal;
  -ms-flex-pack: normal;
  justify-content: normal;
}

@media (min-width:769px) {
  .c2 {
    width: calc(50% - 16px);
  }
}

@media (min-width:1025px) {

}

@media (min-width:1201px) {

}

@media (min-width:1441px) {

}

@supports (display:grid) {
  .c2 {
    grid-column: span 3;
    width: auto;
    margin: 0;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    grid-template-columns: repeat(12,1fr);
    grid-gap: 16px;
    justify-items: normal;
  }

  .c0 > .c1 {
    display: block;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    />
    <div
      class="c1 c2"
    />
    <div
      class="c1 c2"
    />
    <div
      class="c1 c2"
    />
  </div>
</div>
`;

exports[`component: Grid should render extraLarge viewport design 1`] = `
.c2 {
  box-sizing: border-box;
  margin: 8px 8px;
  width: calc(33.33333333333333% - 16px);
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 > .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:769px) {

}

@media (min-width:1025px) {

}

@media (min-width:1201px) {

}

@media (min-width:1441px) {
  .c2 {
    width: calc(16.666666666666664% - 16px);
  }
}

@supports (display:grid) {
  .c2 {
    grid-column: span 4;
    width: auto;
    margin: 0;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    grid-template-columns: repeat(12,1fr);
    grid-gap: 16px;
    justify-items: center;
  }

  .c0 > .c1 {
    display: block;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    />
    <div
      class="c1 c2"
    />
    <div
      class="c1 c2"
    />
    <div
      class="c1 c2"
    />
    <div
      class="c1 c2"
    />
    <div
      class="c1 c2"
    />
  </div>
</div>
`;

exports[`component: Grid should render tiny viewport design 1`] = `
.c2 {
  box-sizing: border-box;
  margin: 8px 8px;
  width: calc(25% - 16px);
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 > .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

@media (min-width:769px) {

}

@media (min-width:1025px) {

}

@media (min-width:1201px) {

}

@media (min-width:1441px) {

}

@supports (display:grid) {
  .c2 {
    grid-column: span 3;
    width: auto;
    margin: 0;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    grid-template-columns: repeat(12,1fr);
    grid-gap: 16px;
    justify-items: end;
  }

  .c0 > .c1 {
    display: block;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    />
    <div
      class="c1 c2"
    />
    <div
      class="c1 c2"
    />
    <div
      class="c1 c2"
    />
  </div>
</div>
`;
